--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-matplotlib==3.2.1
-numpy==1.19.0
+beautifulsoup4==4.9.0
+geopy==1.21.0
+geotext==0.4.0
+matplotlib==3.1.2
 pandas==1.0.3
-cartopy==0.17.0
+plotly==4.6.0
+plotly-express==0.4.1
+requests==2.23.0
+urllib==2.7.9
